--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   connectivity_plus: ^6.0.3
   path_provider: ^2.1.4
   photo_manager: ^3.2.1
+  permission_handler: ^11.3.1
+  network_info_plus: ^5.0.2
+  
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -67,6 +70,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/images/land.png
+    - assets/images/takeoff.webp
 
   # To add assets to your application, add an assets section, like this:
   # assets:
